# CPPServer

./: CMakeLists.txt  conanfile.py  helpful_commands.md  run.sh
automation/: build.sh
src/: main.cpp
